--- a/FamilyRecipes/Pages/Shared/_Layout.cshtml
+++ b/FamilyRecipes/Pages/Shared/_Layout.cshtml
@@ -63,8 +63,8 @@
                 &nbsp;
             </div>
         </div>
-        <div class="container t-pinky index100 text-center fw1000 pop">
-            &copy; 2024 - FamilySystem
+        <div class="container t-pinky index100 text-center f-h3 fw1000 pop blacktextedge">
+            &copy; 2024 - FamilyTools
         </div>
     </footer>
 
