--- a/FamilyRecipes/wwwroot/css/backgrounds.css
+++ b/FamilyRecipes/wwwroot/css/backgrounds.css
@@ -12,16 +12,16 @@
 }
 
 .recipe-bg {
-    background-image: url('../images/graphics/bg/checkers_tile.png');
-    background-repeat: repeat;
+    background-image: url('../images/graphics/bg/checkers.png');
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: auto;
+    background-size: cover;
+
     width: 100%;
     height: 100%; /* -2px for upper and lower border line */
     content: ' ';
     display: block;
-    position: absolute;
-    left: 0px;
+    position: center;
     top: 61px;
 }
 
